--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,8 @@
 name: CI/CD Skeleton
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
 
 jobs:
   build:
@@ -28,15 +30,19 @@ jobs:
         uses: actions/checkout@v4
       - name: Lint Stage
         run: echo "Running linting (CI/CD Best Practice: Code Quality and Security, Linting)"
+
   unit_test:
     runs-on: ubuntu-latest
-    needs: [build, static_code_scan, lint]
+    needs:
+      - build
+      - static_code_scan
+      - lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Unit Test Stage
         run: echo "Running unit tests (CI/CD Best Practice: Pipeline Stage Separation, Code Quality and Security)"
-  
+
   test:
     runs-on: ubuntu-latest
     needs: unit_test
@@ -54,7 +60,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Security Scan Stage
         run: echo "Performing security scan (CI/CD Best Practice: Code Quality and Security)"
-  
+
   artifact_management:
     runs-on: ubuntu-latest
     needs: security_scan
@@ -82,7 +88,13 @@ jobs:
 
   notification:
     runs-on: ubuntu-latest
-    needs: [build, test, security_scan, deploy, monitor, artifact_management]
+    needs:
+      - build
+      - test
+      - security_scan
+      - deploy
+      - monitor
+      - artifact_management
     steps:
       - name: Notification Stage
         run: echo "Sending notifications (CI/CD Best Practice: Notifications and Alerts)"
