--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
 
   code-coverage:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,7 +28,7 @@ jobs:
 
   security-scan:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: code-coverage
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,6 +38,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: security_scan
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -46,7 +48,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: security-scan
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -56,7 +58,7 @@ jobs:
 
   sanity:
     runs-on: ubuntu-latest
-    needs: security-scan
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -66,7 +68,7 @@ jobs:
 
   regression:
     runs-on: ubuntu-latest
-    needs: security-scan
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -76,7 +78,7 @@ jobs:
 
   uat:
     runs-on: ubuntu-latest
-    needs: security-scan
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -86,7 +88,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: code-coverage
+    needs: uat
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
