--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: security_scan
+    needs: security-scan
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
