--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,7 +88,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: uat
+    needs: [test, sanity, regression, UAT]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
